<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screen_6">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locaName"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:layout_marginStart="40dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80sp"
            android:src="@drawable/icon1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/straight_dash_line"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layerType="software" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/villName"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen5"
            android:textSize="18sp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="बिजली सप्लाई"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="40sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_22hrs"
                android:id="@+id/rbtn1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_22hrs"
                android:id="@+id/rbtn2"
                android:layout_marginLeft="20dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="> 22 hrs"
                android:id="@+id/rbtn3"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="सड़कों की हालत"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="40sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="अच्छी"
                android:id="@+id/rbtn4"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="औसत"
                android:id="@+id/rbtn5"
                android:layout_marginLeft="20dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="खराब"
                android:id="@+id/rbtn6"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="पीने का पानी की हालत"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="40sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="अच्छी"
                android:id="@+id/rbtn7"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="औसत"
                android:id="@+id/rbtn8"
                android:layout_marginLeft="20dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="खराब"
                android:id="@+id/rbtn9"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="सरकारी स्वास्थ्य सुविधाएँ"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="40sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="छेत्र में"
                android:id="@+id/rbtn10"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=">5km"
                android:id="@+id/rbtn11"
                android:layout_marginLeft="20dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/less"
                android:id="@+id/rbtn12"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="सरकारी स्कूल"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="40sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="अच्छी"
                android:id="@+id/rbtn13"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="औसत"
                android:id="@+id/rbtn14"
                android:layout_marginLeft="20dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="खराब"
                android:id="@+id/rbtn15"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginStart="20sp"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/update"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="80sp"
            android:textColor="@color/black"
            />
        <ImageButton
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            android:layout_marginStart="60sp" />

    </LinearLayout>

</LinearLayout>